# CLabs

./: .gitignore
lab1/: MakeFile  Makefile  README.md  func.c  main.c  tests.c
lab2/: Makefile  README.md  func.c  generator.c  input1.txt  input2.txt  input3.txt  main.c  tests.c
lab3/: Makefile  README.md  func.c  main.c  test.c
lab4/: Makefile  README.md  func.c  main.c  output.txt  test.c
lab5/: .gitignore  CMakeLists.txt  README.md  benchmark.c  func.c  func.h  graph.txt  input.txt  main.c  output.txt  test_graph.cpp
lab6/: README.md  main.sh
